<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.passwordmanager.ui.add_password.AddPasswordFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_add_password" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.passwordmanager.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.passwordmanager.ui.generator.GeneratorFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_aboutus"
        android:name="com.example.passwordmanager.ui.aboutus.AboutUs"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about_us" />
</navigation>